style: increase padding-top to avoid header overlap with ticker

--- a/src/portals/user/ServiceDetail.css
+++ b/src/portals/user/ServiceDetail.css
@@ -7,7 +7,7 @@
 }
 
 .service-detail-container {
-    padding-top: 110px; /* Offset the fixed navbar */
+    padding-top: 150px; /* Offset the fixed navbar and services ticker */
 }
 
 /* Breadcrumbs */
